--- a/index.html
+++ b/index.html
@@ -4,108 +4,45 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>VDO.ape</title>
-  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet" />
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Space Grotesk', sans-serif;
-      background-color: #b30000;
-      color: white;
-    }
 
-    header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background-color: #b30000;
-      z-index: 1000;
-      padding: 1rem 0;
-      border-bottom: 1px solid white;
-    }
+  <!-- Google Font: Space Grotesk -->
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
 
-    nav {
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-size: 1.1rem;
-      position: relative;
-    }
-
-    nav a::after {
-      content: '';
-      position: absolute;
-      width: 100%;
-      height: 1px;
-      background-color: white;
-      left: 0;
-      bottom: -4px;
-      transform: scaleX(0);
-      transform-origin: left;
-      transition: transform 0.3s ease;
-    }
-
-    nav a:hover::after {
-      transform: scaleX(1);
-    }
-
-    .content {
-      padding-top: 7rem;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .intro-text {
-      font-size: 4rem;
-      font-weight: bold;
-      margin-bottom: 3rem;
-    }
-
-    iframe {
-      width: 80%;
-      max-width: 960px;
-      height: 540px;
-      border: none;
-    }
-
-    footer {
-      margin-top: 4rem;
-      text-align: center;
-      padding: 2rem;
-      border-top: 1px solid white;
-    }
-
-    footer p {
-      margin: 0.3rem 0;
-    }
-  </style>
+  <!-- Link to Custom CSS -->
+  <link rel="stylesheet" href="/style.css" />
 </head>
-<body>
+<body style="margin: 0; background-color: #ff0000; font-family: 'Space Grotesk', sans-serif; color: white;">
 
-<!-- Header -->
-<header class="nav">
-  <a href="/index.html">Home</a>
-  <a href="/works/">Works</a>
-  <a href="/recognitions.html">Recognitions</a>
-  <a href="/writings.html">Writings</a>
-  <a href="/about.html">About</a>
-</header>
+  <!-- Header -->
+  <header class="nav">
+    <a href="/index.html">Home</a>
+    <a href="/works/">Works</a>
+    <a href="/recognitions.html">Recognitions</a>
+    <a href="/writings.html">Writings</a>
+    <a href="/about.html">About</a>
+  </header>
 
-<!-- Your main content goes here -->
+  <!-- Main Content -->
+  <main style="display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 4rem 1rem;">
+    <h1 style="font-size: 3rem; font-weight: 700; margin-bottom: 2rem;">Welcome to My _____</h1>
 
-<!-- Footer -->
-<footer class="footer">
-  <p>lx_kang@naver.com</p>
-  <p>+86-173-2117-6604</p>
-  <p>WeChat: lx_kang4</p>
-  <p>©2025 Alexander Kang. All Rights Reserved.</p>
-</footer>
+    <!-- Showreel Video -->
+    <div style="width: 80%; max-width: 960px;">
+      <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+        <iframe src="https://player.vimeo.com/video/991421399?title=0&byline=0&portrait=0"
+                style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+                frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+      </div>
+    </div>
+  </main>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <p>lx_kang@naver.com</p>
+    <p>+86-173-2117-6604</p>
+    <p>WeChat: lx_kang4</p>
+    <p>©2025 Alexander Kang. All Rights Reserved.</p>
+  </footer>
 
 </body>
 </html>
